Fixing some issue: Some images look wrong position wise from the preview

--- a/project-1/styles/style.css
+++ b/project-1/styles/style.css
@@ -161,13 +161,13 @@ footer {
 
 #companyLeftImage {
     position: absolute;
-    left: 20px;
+    left: 40px;
     top: 320px;
 }
 
 #companyRightImage {
     position: absolute;
-    left: 1315px;
+    left: 1400px;
     top: 320px;
 }
 
